@@ -39,9 +39,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The index of the action that was triggered.</summary>
         <returns>a <see cref="T:System.Int32" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>See <see cref="P:Gtk.ActionActivatedArgs.InsertActionText"/> 
+	  and  <see cref="P:Gtk.ActionActivatedArgs.InsertActionMarkup"/>
+	  for more context about the index property.
+	</remarks>
       </Docs>
     </Member>
   </Members>
