@@ -9,8 +9,11 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Arguments for the event fired by 
+      <see cref="T:Gtk.FileFolder"/>-descended
+      classes when files are added to a folder: 
+      <see cref="E:Gtk.FileFolder.FilesAdded"/>.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>GLib.SignalArgs</BaseTypeName>
@@ -24,9 +27,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <returns>a <see cref="T:Gtk.FilesAddedArgs" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Paths">
@@ -37,9 +40,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The paths of the files that were added to the folder.</summary>
         <returns>a <see cref="T:GLib.SList" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
